11/07/04 r383 Updated german language file
11/01/03 r381 [4] Updated scarynet module to take advantage of IRCu 2.10.12
10/12/29 r376 Updated GeoIP API to v1.4.6
10/07/17 r363 Renamed STATS command to STATUS
10/07/05 r361 do_p10_burst now supports +L channel mode
10/07/02 r358 inspircd12 module declared compatible with inspircd 2.0

Fixes
11/02/02 r405 [2] Fix for crash when parsing * for NICKIP in unreal32
11/01/06 r389 [2] Fixed X3 version reply interpretation (again)
10/12/29 r374 [2] Removed 2 redundant variables and updated ircdcapab for IPv6
10/12/08 r372 Ignore PRIVMSG messages sent directly from ircds [closes #1186]
10/09/08 r366 Fixed P10 MODE not using the correct channel creation timestamp
10/08/12 r365 inspircd12 now sends proper PING messages
10/08/12 r364 Fixed SQL schema using TYPE which is deprecated
10/07/10 r362 [2] Fixed crash on module help callbacks
10/07/05 r361 Fixed nefarious13 module missing channel +L support
10/07/03 r358 Fixed autoop not working properly on some ircds
10/03/27 r353 [2] Fixed Nefarious kill message parsing
10/03/15 r352 [2] Fixed X3 version reply interpretation
09/09/28 r345 Fixed sql_do_chanmodes crashing on missing parameters
09/09/21 r340 Fixed crash on P10 ban burst
09/09/13 r338 inspircd12 now sends TS6SID on BURST
09/09/13 r336 [1] Fixed issues in the ratbox protocol module
09/09/13 r333 [1] Fixed crash with ts6 when network contains a non-ts6 server

Removals
11/01/31 r398 Removed support for VS2003 and VS2005

Developers
Denora Team <dev@denorastats.org>

Contributors
[1] Jeremy <jeremy@ssnet.ca>
[2] Jobe <jobe@mdbnet.co.uk>
[3] drak (Giovani Roberto Sehnen) <drak@clubeirc.com>
[4] OUTsider <outsider@scarynet.org>


Denora v1.4.4
-------------

Additions
09/09/13 r330 Denora now logs when loading db files
09/09/10 r324 Added support for Nefarious 1.3 (untested) [closes #564]
09/09/08 r318 Added support for InspIRCd 1.2 METADATA message [closes #566]